Change floating point comparison involving equals to follow primitive comparison (==, <=, >=) when the expected value is a primitive.
If given a wrapper then equals semantics is used over ==.

Fixes #1715